# IMServer

./: .gitignore  CMakeLists.txt  README.md
client/app/: package-lock.json  package.json
client/app/src/main/: main.js
config/: server.conf
doc/: Protocol.md  README.md
docs/architecture/: architecture.md  microservice_architecture.md
docs/design/: object_pool_implementation.md  unified_connection_management.md
docs/modules/: core_module.md  network_module.md  storage_module.md  tool_module.md
docs/protocol/: protocol_design.md  protocol_parsing_routing.md
example/: CMakeLists.txt  Client.cpp
examples/: CrossPlatformTest.cpp  HttpServerWithConnectionManagerExample.cpp  IdGeneratorExample.cpp  TcpServerTest.cpp
server/account_server/: AccountService.cpp  AccountService.h  AccountWorker.cpp  AccountWorker.h  CMakeLists.txt  LoginConn.cpp  LoginConn.h  UserInfo.cpp  UserInfo.h  account_server.cpp
server/account_server/lib/: LoginClientConn.cpp  LoginClientConn.h
server/base/: BaseClient.cpp  BaseClient.h  BaseService.cpp  BaseService.h  BlockingQueue.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  Exception.cpp  Exception.h  IMPdu.cpp  IMPdu.h  Logger.h  Message.cpp  Message.h  PduHeader.cpp  PduHeader.h  ServiceParam.h  String.h  TcpConn.cpp  TcpConn.h  TcpConnManager.cpp  TcpConnManager.h  ZMQMessage.h  ZMQSocketWrapper.h  zmq_addon.hpp
server/common/: ByteStream.cpp  ByteStream.h  CMakeLists.txt  HeartBeat.cpp  HeartBeat.h  IMPdu.cpp  IMPdu.h  PduHeader.cpp  PduHeader.h  TcpConn.cpp  TcpConn.h  TcpConnManager.cpp  TcpConnManager.h
server/config/: account_server_config.ini  conn_server_config.ini  login_server_config.ini  route_server_config.ini
server/conn_server/: CMakeLists.txt  ConnService.cpp  ConnService.h  ConnectionLimiter.cpp  ConnectionLimiter.h  HeartBeatHandler.cpp  HeartBeatHandler.h  LoginServerResult.cpp  MsgDispatch.cpp  MsgDispatch.h  MsgDispatcher.cpp  MsgDispatcher.h  SessionConn.cpp  SessionConn.h  SessionConnManager.cpp  SessionConnManager.h  conn_server.cpp
server/lib/: ApplicationConfig.cpp  ApplicationConfig.h  CMakeLists.txt  ServerConnection.h  ServerConnectionLimiter.h  ServerConnector.cpp  ServerConnector.h  ServerWorker.cpp  ServerWorker.h  ServiceAcceptor.h  ServiceHandler.cpp  ServiceHandler.h  ServiceMessage.cpp  ServiceMessage.h  ServiceProvider.cpp  ServiceProvider.h  ServiceWorker.cpp  ServiceWorker.h  ZookeeperClient.cpp  ZookeeperClient.h
server/lib/tcp_server/: ServerConnection.h  ServerConnectionLimiter.cpp  ServerConnectionLimiter.h  ServerConnector.cpp  ServerConnector.h  ServiceHandler.cpp  ServiceHandler.h  ServiceMessage.cpp  ServiceMessage.h
server/login_server/: CMakeLists.txt  LoginConn.cpp  LoginConn.h  login_server.cpp
server/login_server/lib/: LoginClient.cpp  LoginClient.h  LoginClientConn.cpp  LoginClientConn.h
server/net/: ApplicationConfig.cpp  ApplicationConfig.h  CMakeLists.txt  ServerConnectionLimiter.cpp  ServiceAcceptor.h  ServiceHandler.cpp  ServiceHandler.h  ServiceMessage.cpp  ServiceProvider.cpp  ServiceProvider.h  ServiceWorker.cpp  ServiceWorker.h
server/protobuf/: CMakeLists.txt  IM.BaseType.proto  IM.Login.proto  create.sh
server/protobuf/protocol/: ByteStream.cpp  ByteStream.h  HeartBeat.cpp  HeartBeat.h  IM.AccountServer.proto  IM.BaseType.proto  IM.ConnServer.proto  IM.Login.proto  IMPdu.cpp  IMPdu.h  PduHeader.cpp  PduHeader.h
server/route_server/: CMakeLists.txt  ClientHeartBeatHandler.cpp  ClientHeartBeatHandler.h  LoginServerResult.cpp  LoginServerResult.h  MsgHandler.cpp  MsgHandler.h  RouteConn.cpp  RouteConn.h  RouteConnManager.cpp  RouteConnManager.h  route_server.cpp  route_server_config.ini
server/rpc_service/: ApplicationConfig.cpp  ApplicationConfig.h  CMakeLists.txt  ServiceProvider.cpp  ServiceProvider.h
server/service_proxy/: CMakeLists.txt  MsgMonitor.cpp  MsgMonitor.h  service_proxy.cpp
server/test/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  client_conn.cpp
src/: Buffer.h  CMakeLists.txt  Exception.h  ImServer.cpp  ImServer.h  Message  Message.h  MessageHandler.cpp  MessageHandler.h  MessageService.cpp  MessageService.h  Util.h  util.h
src/common/: common.cmake
src/common/protocol/: CMakeLists.txt  gateway_routing.proto  generate_grpc_code.bat  generate_grpc_code.sh
src/gateway/: AuthCenter.cpp  AuthCenter.h  CMakeLists.txt  Gateway.cpp  Gateway.h  RoutingClient.cpp  RoutingClient.h  main.cpp
src/gateway/network/: CMakeLists.txt  HttpServer.h  TcpServer.cpp  TcpServer.h  WebSocketServer.h
src/gateway/protocol/: AsyncExecutor.cpp  CMakeLists.txt  HttpMessage.cpp  HttpMessage.h  Message.cpp  Message.h  MessageRouter.cpp  MessageRouter.h  ProtocolManager.cpp  ProtocolManager.h  TcpMessage.cpp  TcpMessage.h  WebSocketMessage.h  WebSocketParser.h
src/network/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  EventLoop.cpp  EventLoop.h  EventSystem.cpp  EventSystem.h  HttpServer.cpp  HttpServer.h  TcpServer.cpp  TcpServer.h  WebSocketServer.cpp  WebSocketServer.h  event_loop.cpp  event_loop.h  main.cpp
src/proto/: CMakeLists.txt  IM.ServerMsg.pb.cc  IM.ServerMsg.pb.h  IM.ServerMsg.proto  create_proto.sh
src/protocol/: AsyncExecutor.cpp  AsyncExecutor.h  CMakeLists.txt  HttpMessage.h  HttpParser.cpp  HttpParser.h  Message.cpp  Message.h  MessageRouter.cpp  MessageRouter.h  Parser.cpp  Parser.h  ProtocolManager.cpp  ProtocolManager.h  TcpMessage.h  TcpParser.cpp  TcpParser.h  WebSocketMessage.cpp  WebSocketMessage.h  WebSocketParser.cpp  WebSocketParser.h
src/routing/: CMakeLists.txt  LoadBalancer.cpp  LoadBalancer.h  MessageQueue.cpp  MessageQueue.h  MessageRouter.cpp  MessageRouter.h  Metrics.cpp  Metrics.h  README.md  RoutingService.cpp  RoutingService.h  ServiceDiscovery.cpp  ServiceDiscovery.h  main.cpp
src/tool/: CMakeLists.txt  IdGenerator.cpp  IdGenerator.h  JsonUtils.cpp  JsonUtils.h  ObjectPool.h  ObjectPool.tpp  ObjectPoolTest.cpp
test/: CMakeLists.txt
test/zmq_test/: zmq.hpp
test/zmq_test/client/: CMakeLists.txt  client.cpp
test/zmq_test/proxy/: CMakeLists.txt  proxy.cpp
(+6 files in other folders)
